After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666350 - prevent sysfs warnings on !linux
prevent sysfs warnings on !linux
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: color
3.2.x
Other OpenBSD
: Normal minor
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-12-16 09:30 UTC by Antoine Jacoutot
Modified: 2011-12-16 11:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
set the sysfs_* arrays to NULL (1.30 KB, patch)
2011-12-16 09:30 UTC, Antoine Jacoutot
none Details | Review

Description Antoine Jacoutot 2011-12-16 09:30:55 UTC
Created attachment 203643 [details] [review]
set the sysfs_* arrays to NULL

Hi.

AFAIK the /sys filesystem is only availale on Linux, so there is no need to
throw lots of warnings about /sys/class/dmi/... not being available on
other OSes.

What do you think, would it be alright for me to push this patch or is there a better solution?
Thanks.
Comment 1 Richard Hughes 2011-12-16 10:05:32 UTC
Yup, looks fine to me, but one typo in the commit message:

>The /sys filesystem is only availa*b*le on Linux, so there is no need to

Please push when fixed. Thanks!
Comment 2 Antoine Jacoutot 2011-12-16 11:25:31 UTC
Thanks Richard.
pushed as 52b9ea0cf11aa72b8251fa11e99cc58054b9c81c