color plugin: prevent sysfs warning on !linux

The /sys filesystem is only available on Linux, so there is no need to
throw lots of warnings about /sys/class/dmi/... not being available on
other OSes.
https://bugzilla.gnome.org/show_bug.cgi?id=666350